@@ -260,6 +260,8 @@ operation, such as copying or deleting some files.</label>
       </hbox>
     </frame>
     <frame label='Behaviour'>
+      <toggle name='menu_quick' label='File menu on right-click'>Show the File menu instead of the main menu when right-clicking with files selected (the main menu can be accessed by holding down Control).</toggle>
+      <spacer/>
       <entry name='menu_xterm' label="`Xterm Here' program">The program to launch when you choose `Xterm Here' from the menu.</entry>
     </frame>
     <frame label='Keyboard shortcuts'>
