@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+16-Mar-2004
+~~~~~~~~~~~
+Option to make the File menu appear directly when the menu is opened with
+files selected (Peter Geer).
+
 15-Mar-2004
 ~~~~~~~~~~~
 Added an arrow to the comparison area of the action box so you can see
